@startuml

title __URBAN_PLANNER's Class Diagram__\n

  namespace urban_planner {
    abstract class urban_planner.Building {
        # viewMatrix : int[][]
        - height : int
        - length : int
        - position : int
        + equals()
        + getHeight()
        + getLength()
        + getPosition()
        + getViewMatrix()
        + hashCode()
        + printViewMatrix()
        + setHeight()
        + setLength()
        + setPosition()
        + toString()
        + updateViewMatrix()
        # Building()
        # Building()
    }
  }
  

  namespace urban_planner {
    class urban_planner.House {
        - color : String
        - owner : String
        - room : int
        + House()
        + House()
        + equals()
        + getColor()
        + getOwner()
        + getRoom()
        + hashCode()
        + setColor()
        + setOwner()
        + setRoom()
        + toString()
        # clone()
    }
  }
  

  namespace urban_planner {
    class urban_planner.Main {
        {static} + get_selection()
        {static} + main()
    }
  }
  

  namespace urban_planner {
    class urban_planner.Market {
        - closingTime : String
        - openingTime : String
        - owner : String
        + Market()
        + Market()
        + closingTime()
        + equals()
        + getClosingTime()
        + getOpeningTime()
        + getOwner()
        + hashCode()
        + openingTime()
        + owner()
        + setClosingTime()
        + setOpeningTime()
        + setOwner()
        + toString()
        # clone()
    }
  }
  

  namespace urban_planner {
    class urban_planner.Office {
        - jobType : String
        - owner : String
        + Office()
        + Office()
        + equals()
        + getJobType()
        + getOwner()
        + hashCode()
        + setJobType()
        + setOwner()
        + toString()
        # clone()
    }
  }
  

  namespace urban_planner {
    class urban_planner.Playground {
        + Playground()
        + Playground()
        + equals()
        + hashCode()
        + toString()
        # clone()
    }
  }
  

  namespace urban_planner {
    class urban_planner.Street {
        ~ size : int
        - buildings : Building[]
        + Street()
        + add()
        + buildingNumber()
        + delete()
        + emptyLand()
        + listBuildings()
        + maxStreetHeigth()
        + maxStreetLength()
        + playgroundNumber()
        + printViewMatrix()
        + silhouetteViewMatrix()
        + streetViewMatrix()
        + totalWithoutPlayground()
    }
  }
  

  urban_planner.Building .up.|> java.lang.Cloneable
  urban_planner.House -up-|> urban_planner.Building
  urban_planner.Market -up-|> urban_planner.Building
  urban_planner.Office -up-|> urban_planner.Building
  urban_planner.Playground -up-|> urban_planner.Building


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
